In myModal by mistake it was with classed it was fixed to be with ids, and in style.css the whole modal box were hidden by deffault

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,3 +87,6 @@ li {
     display: none;
 }
 
+#myModal{
+    display: none;
+}
